<resources>
    <string name="app_name">NavApplication</string>
    <string name="menu_map">Карта</string>
    <string name="menu_points">Позиции, ориентиры</string>
    <string name="menu_navigation">Топопривязка</string>
    <string name="menu_orientation">Ориентирование</string>
    <string name="menu_settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>